fix scrollbar css bug

--- a/src/scss/_notifications.scss
+++ b/src/scss/_notifications.scss
@@ -3,12 +3,13 @@
   margin: 0;
   pointer-events: none;
   width: 60%;
-  z-index: 2;
+  overflow: hidden;
 
   position: absolute;
   left: 0;
   top: 0;
   right: 0;
+  z-index: 2;
 }
 
 .gt-active {
