--- a/src/scss/_toolbar.scss
+++ b/src/scss/_toolbar.scss
@@ -3,6 +3,7 @@
   background: $darker-gray;
   border-right: 1px solid $darkest-gray;
   width: 70px;
+  overflow: hidden;
 
   position: absolute;
   top: 0;
